<resources>
    <string name="app_name">MoviesCategory</string>
    <string name="popular">Popular</string>
    <string name="favorite">Favorites</string>
    <string name="top_rated">Top Rated</string>
    <array name="order_filter">
        <item>Popular</item>
        <item>Tob Rated</item>
    </array>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="vote_average">Vote Average</string>
    <string name="release_date">Release Date</string>
    <string name="fav">Mark As \n Favorite</string>
    <string name="trailers">Trailers</string>
    <string name="no_trailers">No Trailers</string>
    <string name="no_reviews">No Reviews</string>
    <string name="no_thing">No Thing Exists</string>
    <string name="no_connection">No Connection !</string>
    <string name="reviews">Reviews</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="image_description">Movie Poster</string>
    <string name="movie_added">Movie has added to your favorites</string>

</resources>
