<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_tv_title"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="36sp"
            tools:text="Chappi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:id="@+id/movie_iv_poster"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image_description" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp">

                <TextView
                    android:id="@+id/movie_tv_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    tools:text="2015" />

                <TextView
                    android:id="@+id/movie_tv_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_tv_year"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    tools:text="120min" />

                <TextView
                    android:id="@+id/movie_tv_vote_average"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_tv_duration"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="8.1/10" />

                <Button
                    android:onClick="addMovieToFavorite"
                    android:id="@+id/movie_add_to_fav_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_tv_vote_average"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_shape"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@string/fav" />
            </RelativeLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/movie_tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/overview"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/trailers_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trailers"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailers_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/reviews_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/linear_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/play_button"
                    android:text="@string/author"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/content"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reviews_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="4dp">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</ScrollView>